work in progress, preparing cascadingupdate replacement